--- a/contact.html
+++ b/contact.html
@@ -419,7 +419,7 @@
                 
 
                 <!-- FAQ -->
-                <div class="mt-10 lg:mt-14">
+                <!-- <div class="mt-10 lg:mt-14">
                     <h3 class="text-2xl font-medium text-dark dark:text-light lg:text-3xl">
                         Frequently Asked Questions
                     </h3>
@@ -626,7 +626,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </main>
 
