--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         </span>
                         🖥️.<br>
                         With strong skills in <span class="font-semibold text-dark dark:text-white"> HTML, CSS,
-                            JavaScript, and frameworks</span>, committed to ongoing education and real-world project
+                            JavaScript, and React frameworks</span>, committed to ongoing education and real-world project
                         experience to stay ahead in the field.
                     </p>
 
