--- a/services.html
+++ b/services.html
@@ -333,7 +333,7 @@
                             </svg>
                         </div>
                         <p class="mt-3 text-base font-medium text-dark dark:text-light/70">
-                            UI UX Design
+                            Frontend Development
                         </p>
                     </div>
                     <div class="rounded-2xl bg-light p-2 text-center dark:bg-dark-2 md:p-4">
@@ -353,7 +353,7 @@
                             </svg>
                         </div>
                         <p class="mt-3 text-base font-medium text-dark dark:text-light/70">
-                            Product Design
+                            Responsive Web Design
                         </p>
                     </div>
                     <div class="rounded-2xl bg-light p-2 text-center dark:bg-dark-2 md:p-4">
@@ -365,10 +365,10 @@
                             </svg>
                         </div>
                         <p class="mt-3 text-base font-medium text-dark dark:text-light/70">
-                            Branding
+                            Problem Solving and Debugging
                         </p>
                     </div>
-                    <div class="rounded-2xl bg-light p-2 text-center dark:bg-dark-2 md:p-4">
+                    <!-- <div class="rounded-2xl bg-light p-2 text-center dark:bg-dark-2 md:p-4">
                         <div class="grid place-content-center rounded-lg bg-white p-6 dark:bg-black">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="h-12 w-12 text-primary lg:h-16 lg:w-16">
                                 <path d="M13.333 18.667H16a5.334 5.334 0 0 0 5.333-5.334A2.667 2.667 0 0 1 24 10.667h16a2.667 2.667 0 0 1 2.667 2.666A5.333 5.333 0 0 0 48 18.667h2.667A5.334 5.334 0 0 1 56 24v24a5.333 5.333 0 0 1-5.333 5.333H13.333A5.333 5.333 0 0 1 8 48V24a5.333 5.333 0 0 1 5.333-5.333Z" />
@@ -410,67 +410,71 @@
                         <p class="mt-3 text-base font-medium text-dark dark:text-light/70">
                             Visualization
                         </p>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- image -->
-                <div class="mt-10 aspect-video overflow-hidden rounded-lg bg-light dark:bg-dark-2 lg:mt-14">
+                <!-- <div class="mt-10 aspect-video overflow-hidden rounded-lg bg-light dark:bg-dark-2 lg:mt-14">
                     <img src="assets/img/blog-img-1.jpg" alt="" class="h-full w-full rounded-lg object-cover" />
-                </div>
+                </div> -->
 
                 <!-- Brands -->
                 <div class="mt-10 lg:mt-14">
                     <h3 class="text-2xl font-medium text-dark dark:text-light lg:text-3xl">
-                        Working With 50+ Brands ✨ Worldwide
+                        <!-- Working With 50+ Brands ✨ Worldwide -->
                     </h3>
-                    <div class="mt-8 grid grid-cols-[repeat(auto-fit,_minmax(60px,1fr))] gap-2 lg:grid-cols-[repeat(auto-fit,_minmax(80px,1fr))] lg:gap-4">
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/notion.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/webflow.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/mico.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/framer.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/zeplin.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/figma.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/notion.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/webflow.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/mico.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/framer.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/zeplin.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/figma.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/notion.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/webflow.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/mico.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
-                        </div>
-                        <div class="grid h-16 place-content-center rounded-lg bg-light p-3 dark:bg-dark-2 lg:h-20 lg:rounded-2xl lg:p-4">
-                            <img src="assets/img/framer.svg" alt="" class="h-8 w-8 lg:h-10 lg:w-10" />
+                    <div class="rounded-2xl bg-white p-6 shadow dark:bg-black dark:shadow-dark">
+                        <h3 class="text-2xl font-semibold dark:text-light">My Expert Area</h3>
+    
+                        <div class="mt-6 grid grid-cols-2 gap-4 md:grid-cols-3">
+                            <div class="text-center">
+                                <div class="grid place-content-center rounded-lg bg-light p-3 dark:bg-dark-2">
+                                    <img src="assets/img/html.png" alt="" class="h-8 w-8" />
+                                </div>
+                                <p class="mt-1 text-base font-medium text-dark dark:text-light/70">
+                                    HTML
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <div class="grid place-content-center rounded-lg bg-light p-3 dark:bg-dark-2">
+                                    <img src="assets/img/CSS.png" alt="" class="h-8 w-8" />
+                                </div>
+                                <p class="mt-1 text-base font-medium text-dark dark:text-light/70">
+                                    CSS
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <div class="grid place-content-center rounded-lg bg-light p-3 dark:bg-dark-2">
+                                    <img src="assets/img/js.png" alt="" class="h-8 w-8" />
+                                </div>
+                                <p class="mt-1 text-base font-medium text-dark dark:text-light/70">
+                                    JavaScript
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <div class="grid place-content-center rounded-lg bg-light p-3 dark:bg-dark-2">
+                                    <img src="assets/img/bstap.png" alt="" class="h-8 w-8" />
+                                </div>
+                                <p class="mt-1 text-base font-medium text-dark dark:text-light/70">
+                                    BootStrap
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <div class="grid place-content-center rounded-lg bg-light p-3 dark:bg-dark-2">
+                                    <img src="assets/img/php.png" alt="" class="h-8 w-8" />
+                                </div>
+                                <p class="mt-1 text-base font-medium text-dark dark:text-light/70">
+                                    PHP
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <div class="grid place-content-center rounded-lg bg-light p-3 dark:bg-dark-2">
+                                    <img src="assets/img/csharp.png" alt="" class="h-8 w-8" />
+                                </div>
+                                <p class="mt-1 text-base font-medium text-dark dark:text-light/70">
+                                    C#
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -746,7 +750,7 @@
                 </div>
 
                 <!-- FAQ -->
-                <div class="mt-10 lg:mt-14">
+                <!-- <div class="mt-10 lg:mt-14">
                     <h3 class="text-2xl font-medium text-dark dark:text-light lg:text-3xl">
                         Frequently Asked Questions
                     </h3>
@@ -953,7 +957,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Contact -->
                 <div class="mt-10 lg:mt-14">
