--- a/about.html
+++ b/about.html
@@ -636,13 +636,13 @@
                                     <path
                                         d="m12 15.5 3.4 5.89 1.598-3.233 3.598.232-3.4-5.889m-10.394 0-3.4 5.89L7 18.157l1.598 3.232 3.4-5.889" />
                                 </svg>
-                                <h5 class="font-medium leading-tight text-dark dark:text-light">
+                                <h5 class="font-medium leading-tight text-dark dark:text-light ">
                                     Runner Up
                                 </h5>
                             </div>
 
                             <div class="text-right">
-                                <a href="#"
+                                <!-- <a href="#"
                                     class="inline-flex items-center justify-center gap-2 rounded bg-white px-3 py-2 text-center text-sm leading-none text-dark transition after:absolute after:inset-0 after:h-full after:w-full after:content-[''] hover:bg-light hover:text-primary dark:bg-black dark:text-light/70 dark:hover:bg-dark-2 dark:hover:text-primary">
                                     <span></span>
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 15" fill="none"
@@ -650,7 +650,7 @@
                                         class="h-3.5 w-3.5 shrink-0">
                                         <path d="m9.917 4.583-5.834 5.834m.584-5.834h5.25v5.25" />
                                     </svg>
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                         <div
@@ -682,7 +682,7 @@
                                 </h5>
                             </div>
 
-                            <div class="text-right">
+                            <!-- <div class="text-right">
                                 <a href="#"
                                     class="inline-flex items-center justify-center gap-2 rounded bg-white px-3 py-2 text-center text-sm leading-none text-dark transition after:absolute after:inset-0 after:h-full after:w-full after:content-[''] hover:bg-light hover:text-primary dark:bg-black dark:text-light/70 dark:hover:bg-dark-2 dark:hover:text-primary">
                                     <span></span>
@@ -692,7 +692,7 @@
                                         <path d="m9.917 4.583-5.834 5.834m.584-5.834h5.25v5.25" />
                                     </svg>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <div
                             class="group relative grid grid-cols-1 items-center gap-4 rounded-lg border border-transparent bg-light p-6 transition hover:border-light hover:bg-white dark:bg-dark-2 dark:hover:border-primary dark:hover:bg-black md:grid-cols-4 xl:gap-10">
@@ -723,7 +723,7 @@
                                 </h5>
                             </div>
 
-                            <div class="text-right">
+                            <!-- <div class="text-right">
                                 <a href="#"
                                     class="inline-flex items-center justify-center gap-2 rounded bg-white px-3 py-2 text-center text-sm leading-none text-dark transition after:absolute after:inset-0 after:h-full after:w-full after:content-[''] hover:bg-light hover:text-primary dark:bg-black dark:text-light/70 dark:hover:bg-dark-2 dark:hover:text-primary">
                                     <span></span>
@@ -733,7 +733,7 @@
                                         <path d="m9.917 4.583-5.834 5.834m.584-5.834h5.25v5.25" />
                                     </svg>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <div
                             class="group relative grid grid-cols-1 items-center gap-4 rounded-lg border border-transparent bg-light p-6 transition hover:border-light hover:bg-white dark:bg-dark-2 dark:hover:border-primary dark:hover:bg-black md:grid-cols-4 xl:gap-10">
@@ -764,7 +764,7 @@
                                 </h5>
                             </div>
 
-                            <div class="text-right">
+                            <!-- <div class="text-right">
                                 <a href="#"
                                     class="inline-flex items-center justify-center gap-2 rounded bg-white px-3 py-2 text-center text-sm leading-none text-dark transition after:absolute after:inset-0 after:h-full after:w-full after:content-[''] hover:bg-light hover:text-primary dark:bg-black dark:text-light/70 dark:hover:bg-dark-2 dark:hover:text-primary">
                                     <span></span>
@@ -774,7 +774,7 @@
                                         <path d="m9.917 4.583-5.834 5.834m.584-5.834h5.25v5.25" />
                                     </svg>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
